fixing problems with the expanded and collapsed annotation images

--- a/bundles/org.eclipse.orion.client.editor/web/examples/textview/textstyler.css
+++ b/bundles/org.eclipse.orion.client.editor/web/examples/textview/textstyler.css
@@ -56,3 +56,16 @@ background-repeat: no-repeat;
 	/*background-image: url('images/squiggly_warning.png');*/
 	background-image: url("data:image/png,%89PNG%0D%0A%1A%0A%00%00%00%0DIHDR%00%00%00%04%00%00%00%03%08%06%00%00%00%B4%F4%AE%C6%00%00%00%01sRGB%00%AE%CE%1C%E9%00%00%00%06bKGD%00%FF%00%FF%00%FF%A0%BD%A7%93%00%00%00%09pHYs%00%00%0B%13%00%00%0B%13%01%00%9A%9C%18%00%00%00%07tIME%07%DB%09%16%14%17%11%B8S%83%B6%00%00%00%19tEXtComment%00Created%20with%20GIMPW%81%0E%17%00%00%002IDAT%08%D7cd%80%82%2F't%17200t3~9%A1%1B%CA%C0%C0%E0%C3%C0%C0%D0%CD%C0%C0%B0%88%E1%CB%09%DDs_N%E8%EA%40U%19%01%00(%10%0D%B6%86%EC%90%D3%00%00%00%00IEND%AEB%60%82");
 }
+
+.annotationExpanded {
+	/*background-image: url('images/expanded.png');*/
+	background-image:url('data:image/png,%89PNG%0D%0A%1A%0A%00%00%00%0DIHDR%00%00%00%10%00%00%00%10%08%06%00%00%00%1F%F3%FFa%00%00%00%19tEXtSoftware%00Adobe%20ImageReadyq%C9e%3C%00%00%01%3EIDATx%DA%D4%92%C1J%C3%40%14Eo%A6Ml%3A%ED%24%84%88m%B4%F5Ot%AF%88%DDtS%B7%E2_%B9SA%DDd!%E2%17%08%82%3B%3F%40%94%C4%A6%18JL%3A%A95MbR%14l%85l%04%D1%D9%DC%99w%E0%F0%DEc%844M%F1%93%23%FC%3D%81%EB%05%3D%CE_%BB%96%E3v%5E%7C%0E%85Q%AC5t%93%D2%CA%B9%AE%D6O%0A%05%83%A1%DF%B3%9D%E1qY%2CC%D7%15%D4k%14%C1%88%C3u%3DL%A3%18%AB%0DmoEcs%12%F2%F5%E1%05%E3nB%08%8CV%13%92%5C%C5%24%06%C4%2C%8D%96%81%BC%EE%05%E1%C1b%07s%82%7B%EB%B9Se%0C%3CJ%11FI%96%F1G%26%90%99%92qwsQP%9E%9F%7F%04%0D%12.%8F%CCo%CB%DA%D8%DD%9A%F1B%81%C2%AA(%BD%85%D8%E9n%E3s3%82%00%E4k%E2%23%3E%E3%85%23%B4%9B%BA9%F6%7DH%25%60%A9%24%CCR%22%F9%1D%08%FD%00%EB%19%2F%14%A85%F9BHb8v%1F%13%CE!%92%14%93%90c%60%3B%20%C9%14%2C%E3%85%82%D3%AB%EB%C3%B6%B1%BC%AFR%D9%B4%1E%9Fp%7Bs%07%EB%A1%0F%95V%CC%BC~%96%F1%7F%F0%95%7F%5D%F0.%C0%00%EC%AC%96%CC%18n%25%E0%00%00%00%00IEND%AEB%60%82');
+	
+}
+
+.annotationCollapsed {
+	/*background-image: url('images/collapsed.png');*/
+	background-image:url('data:image/png,%89PNG%0D%0A%1A%0A%00%00%00%0DIHDR%00%00%00%10%00%00%00%10%08%06%00%00%00%1F%F3%FFa%00%00%00%19tEXtSoftware%00Adobe%20ImageReadyq%C9e%3C%00%00%01%60IDATx%DAb%FC%FF%FF%3F%03%25%80%89%81B%40%B1%01%2C%E8%02%9F%BE~%8F%BAu%EF%99%F9%F5%DB%0F%F2%5E%BF%F9%C0%20*%22%C0%A0%A9%AA%B0AMIj5%1F7%E72t%F5%8C%C8a%F0%F1%CB%B7%A8%FD%C7%AF.e%E5%60cPP%90%04j%16bx%FD%E6%1D%C3%83%07O%19~%FF%F8%C3%E0h%A9%1D%CD%CF%C3%B5%0C%A7%17%CE%DFx%1C%FA%97%99%99AS_%8B%81%93_%90%C1%DA%CC%83%81%03Hk%EA%EB0%80%C4%CF%DFx%18%8A7%0C.%5C%7F%10%C0'.%CE%F0%EE%C7%3F%86%0F%40%1BA%E0%3D%90~%07%C4%BC%E2%12%40%F9G%01x%C3%E0%F9%ABw%0C%92%0C%9C%0CY%CE%DEp%B1Hg_0%DD%B2b%15X%1E%AF%01%C2%C2%7C%0C%AC%DF%3E0%CC%DE%B8%86%E1%1F%90%9F%EE%1F%C20%7B%13%90%0D%0C%A6%0Fo%DF%81%E5%F1zAKEa%C3%E7W%AF%188Y%19%18%B8Y!R%9C%2C%2060v%5E%BDf%D0%06%CA%E35%C0BGa5%D3%DF%DF%0Cw%AF%DD%60%F8%FA%EE-%C3%AA%9D%AB%18%BE~x%C7p%EF%DAM%06%E6%BF%BF%18%CC%81%F2x%A3%11%04%DE~%FA%1Au%E1%FA%C3%D0%9B%B7%1F%06%BC%7F%FF%91AP%90%9FACU~%83%BE%A6%FCja%3E%EEe%04%0D%18zy%81b%03%00%02%0C%00%DF%81%88*9%8B%C4%E5%00%00%00%00IEND%AEB%60%82');
+	
+}
+
